# uscophy

./: README.md  download_example_data.sh  environment_current.yaml  pyproject.toml  run_uscophy_SGE_job.sh
uscophy/: __init__.py  sge_submit.py  uscophy.py
uscophy/workflow/: Snakefile  Snakefile_assemble  Snakefile_build
uscophy/workflow/envs/: amas.yaml  astral.yaml  bio.yaml  bio_script.yaml  build_prep.yaml  busco.yaml  busco_tree.yaml  diamond.yaml  hmmer.yaml  plot_by_category.yaml  ragtag.yaml  raxml-ng.yaml  remove_outliers.yaml  seqtk.yaml  spades.yaml  sqlite3.yaml
uscophy/workflow/scripts/: build_busco_db.py  collect_sequences_from_db.py  count_genes_per_node.py  extract_dataset.py  final_overview.py  generate_busco_tree.py  get_mean_length.py  merge_databases.py  plot_by_category.py  plot_species_busco_threshold.py  rename_alignment_header.py  rename_ancestral_header.py  rename_build_inputfiles.py  select_best_duplicate.py
